# TASQuake

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  PropertySheet.props  ReadMe.md  ReadMe.txt  TASQuake.sln  TASQuake.vcxproj  libjpeg.vcxproj  libpng.vcxproj  sourcelist.cmake  zlib.vcxproj
Runs/: e1m1_017.qtas  e1m6_er.qtas  e3m5_er.qtas  id1_er.qtas  id1_nr.qtas
Source/: Makefile.linux  NeaQuake.sln  NeaQuake.vcxproj  PropertySheet.props  TASQuake.sln  TASQuake.vcxproj  cd_linux.c  cd_null.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  cvar.c  file.cpp  file.h  game.c  game_sim.c  gl_decals.c  gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rpart.c  gl_rsurf.c  gl_screen.c  gl_warp.c  glquake.h  host.c  host_cmd.c  image.c  (+60 more)
Source/gas2masm/: gas2masm.c  gas2masm.vcxproj
Source/tas/: afterframes.cpp  afterframes.h  afterframes.hpp  bookmark.cpp  bookmark.hpp  camera.cpp  camera.hpp  cpp_quakedef.cpp  cpp_quakedef.hpp  data_export.cpp  data_export.hpp  drag_editing.cpp  drag_editing.hpp  draw.cpp  draw.hpp  ent_export.cpp  ent_export.hpp  gamestate.cpp  gamestate.hpp  hooks.c  hooks.cpp  hooks.h  hud.cpp  hud.hpp  ipc.cpp  ipc.hpp  ipc2.cpp  ipc2.hpp  ipc_main.cpp  ipc_main.hpp  ipc_prediction.cpp  ipc_prediction.hpp  log.cpp  log.hpp  optimizer.cpp  optimizer.hpp  optimizer_quake.cpp  optimizer_quake.hpp  prediction.cpp  prediction.hpp  (+26 more)
Templates/: .feather  functionality.jinja2
content/: start.bash
content/id1/: basic.cfg  config.cfg  qdqstats.txt
content/joequake/: autoexec.cfg  bautoexec.cfg  client_autoexec.cfg  config.cfg  recording.cfg
content/joequake/tas/: id1_nr.qtas
docs/: functionality.md  power bunnies.md
libtasquake/: CMakeLists.txt
libtasquake/include/libtasquake/: boost_ipc.hpp  console_input.h  draw.hpp  insertion_order_map.hpp  io.hpp  ipc.hpp  log.hpp  optimizer.hpp  prediction.hpp  script_parse.hpp  script_playback.hpp  utils.hpp  vector.hpp
libtasquake/src/: boost_ipc.cpp  console_input.c  draw.cpp  game_funcs.cpp  io.cpp  ipc.cpp  log.cpp  optimizer.cpp  prediction.cpp  script_parse.cpp  script_playback.cpp  test.c  utils.cpp  vector.cpp
libtasquake/test/: CMakeLists.txt  bench.cpp  bench.hpp  bench_frameblock.cpp  binsearch_test.cpp  cliff_tests.cpp  draw_serialization.cpp  framedata_tests.cpp  mutate_tests.cpp  optimizer_test.cpp  parse_tests.cpp  rollingstone_test.cpp  script_tests.cpp  test.cpp  test_io.cpp  vector.cpp
libtasquake/test/server_test/: CMakeLists.txt  client.cpp  server.cpp  stress_client.cpp
libtasquake/test/stdin_test/: CMakeLists.txt  stdin_test.cpp
